--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,2 @@
-# Ignore Node.js build artifacts
-node_modules/
-
-# Ignore Firebase service account JSON files
-hearo-17195-firebase-adminsdk-b9b6j-*.json
-
-# Ignore any files related to Google services
-google-services*.json
-
-# Ignore .gitignore file itself
-.gitignore
+node_modules
+hearo-17195-firebase-adminsdk-b9b6j-15b39067a1.json
