--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "express": "^4.18.2",
     "firebase": "^10.8.0",
     "firebase-admin": "^12.0.0",
+    "fs": "^0.0.1-security",
     "multer": "^1.4.5-lts.1",
     "nanoid": "^5.0.5",
     "nodemailer": "^6.9.9"
