--- a/process.env
+++ b/process.env
@@ -1,1 +1,10 @@
 PORT=3000 NODE_ENV=production node app.js
+FIREBASE_API_KEY=AIzaSyCoFo4_3pM9ooJCKuI3LSUbIOvUTGPWzuA
+FIREBASE_AUTH_DOMAIN=hearo-17195.firebaseapp.com
+FIREBASE_DATABASE_URL=https://hearo-17195-default-rtdb.firebaseio.com
+FIREBASE_PROJECT_ID=hearo-17195
+FIREBASE_STORAGE_BUCKET=hearo-17195.appspot.com
+FIREBASE_MESSAGING_SENDER_ID=976399412290
+FIREBASE_APP_ID=1:976399412290:web:d567798b3c55d64f9c91db
+FIREBASE_MEASUREMENT_ID=G-VNX2N0CQBG
+
