--- a/package.json
+++ b/package.json
@@ -8,5 +8,9 @@
     "multer": "^1.4.5-lts.1",
     "nanoid": "^5.0.5",
     "nodemailer": "^6.9.9"
+  },
+  "scripts": {
+    "start": "node app.js"
   }
 }
+
