[FIX]새로운gcp수정
.

--- a/process.env
+++ b/process.env
@@ -1,10 +1,10 @@
 PORT=3000 NODE_ENV=production node app.js
-FIREBASE_API_KEY=AIzaSyCoFo4_3pM9ooJCKuI3LSUbIOvUTGPWzuA
-FIREBASE_AUTH_DOMAIN=hearo-17195.firebaseapp.com
-FIREBASE_DATABASE_URL=https://hearo-17195-default-rtdb.firebaseio.com
-FIREBASE_PROJECT_ID=hearo-17195
-FIREBASE_STORAGE_BUCKET=hearo-17195.appspot.com
-FIREBASE_MESSAGING_SENDER_ID=976399412290
-FIREBASE_APP_ID=1:976399412290:web:d567798b3c55d64f9c91db
-FIREBASE_MEASUREMENT_ID=G-VNX2N0CQBG
-
+FIREBASE_API_KEY=AIzaSyDW7BCz4bRJB-oFKmmRwumFUU6JdSPNz08
+FIREBASE_AUTH_DOMAIN=hearo-414907.firebaseapp.com
+FIREBASE_DATABASE_URL=https://hearo-414907-default-rtdb.firebaseio.com
+FIREBASE_PROJECT_ID=hearo-414907
+FIREBASE_STORAGE_BUCKET=hearo-414907.appspot.com
+FIREBASE_MESSAGING_SENDER_ID=26288987128
+FIREBASE_APP_ID=1:26288987128:web:8a01b9b7455f76d50b140d
+FIREBASE_MEASUREMENT_ID=G-YL5B8K5LPY
+GOOGLE_APPLICATION_CREDENTIALS="hearo-414907-firebase-adminsdk-h4m2h-10e7324219.json"
