--- a/process.env
+++ b/process.env
@@ -1,9 +1,10 @@
-PORT=3000 NODE_ENV=production node app.js
-FIREBASE_API_KEY=AIzaSyDW7BCz4bRJB-oFKmmRwumFUU6JdSPNz08
-FIREBASE_AUTH_DOMAIN=hearo-414907.firebaseapp.com
-FIREBASE_DATABASE_URL=https://hearo-414907-default-rtdb.firebaseio.com
-FIREBASE_PROJECT_ID=hearo-414907
-FIREBASE_STORAGE_BUCKET=hearo-414907.appspot.com
-FIREBASE_MESSAGING_SENDER_ID=26288987128
-FIREBASE_APP_ID=1:26288987128:web:8a01b9b7455f76d50b140d
-FIREBASE_MEASUREMENT_ID=G-YL5B8K5LPY
+PORT=8080 NODE_ENV=production node src/server.js
+FIREBASE_API_KEY=AIzaSyCBTwW2fwwX3TYBMlYtqdyGeWfsBVaFAm0
+FIREBASE_AUTH_DOMAIN=hearos-414916.firebaseapp.com
+FIREBASE_DATABASE_URL=https://hearos-414916-default-rtdb.firebaseio.com
+FIREBASE_PROJECT_ID=hearos-414916
+FIREBASE_STORAGE_BUCKET=hearos-414916.appspot.com
+FIREBASE_MESSAGING_SENDER_ID=406402784594
+FIREBASE_APP_ID=1:406402784594:web:c18eb139b75423eb4fae8b
+
+
